--- a/src/main/resources/templates/fork.html
+++ b/src/main/resources/templates/fork.html
@@ -19,15 +19,17 @@
             <div class="fork_mail_blue"></div>
             <div class="fork_mail_send">分叉监控</div>
         </div>
-        <div class="fa fa-exclamation-circle fa-3x" aria-hidden="true"
-             style="color: #E57373;text-align: center;margin-top: 30px;"></div>
-        <div class="flex-align-justify restore_text">
-            <span id="info"></span>
+        <div class="frok_restore">
+            <div class="fa fa-exclamation-circle fa-3x" aria-hidden="true"
+                 style="color: #E57373;text-align: center;margin-top: 30px;"></div>
+            <div class="flex-align-justify restore_text">
+                <span id="info"></span>
+            </div>
+            <button class="restore_but flex-align-justify" id="restore">
+                确认恢复
+            </button>
+            <input id="height" style="display: none"/>
         </div>
-        <button class="restore_but flex-align-justify" id="restore">
-            确认恢复
-        </button>
-        <input id="height" style="display: none"/>
     </div>
     <div class="flex align-center flex-column my-3" id="right">
         <div class="fa fa-check-circle fa-5x" style="color: #90E58A;"></div>
