--- a/src/main/resources/templates/node.html
+++ b/src/main/resources/templates/node.html
@@ -141,7 +141,7 @@
 
                     </div>
                     <div class="moda-le">
-                        <h4 class="modal-title moda-root-info">
+                        <h4 class="modal-title moda-root-love">
                             LevelDB路径:
                         </h4>
                         <input class="form-control" style="width: 70%" id="leveldb">
