--- a/src/main/resources/templates/fork.html
+++ b/src/main/resources/templates/fork.html
@@ -19,7 +19,7 @@
             <div class="fork_mail_blue"></div>
             <div class="fork_mail_send">分叉监控</div>
         </div>
-        <div class="frok_restore">
+        <div class="frok_restore" id="error">
             <div class="fa fa-exclamation-circle fa-3x" aria-hidden="true"
                  style="color: #E57373;text-align: center;margin-top: 30px;"></div>
             <div class="flex-align-justify restore_text">
@@ -75,18 +75,23 @@
         data: "",
         success: function (result) {
             if (result.code == -1) {
+                console.log(1)
                 // document.getElementById("bifurcation").innerHTML = "分叉";
                 $("height").val(result.message)
                 $("#error").hide();
                 $("#wait").hide();
             } else if (result.code == 0) {
+                console.log(2)
+
                 // document.getElementById("bifurcation").innerHTML = "异常";
-                // $("#error").hide();
-                // $("#right").hide();
+                $("#error").hide();
+                $("#right").hide();
             } else {
+                console.log(3)
+
                 document.getElementById("info").innerHTML = "error";
-                // $("#error").hide();
-                // $("#wait").hide();
+                $("#error").hide();
+                $("#wait").hide();
             }
         }
     })
@@ -160,11 +165,15 @@
     });
 
     $('#delete').click(function () {
+        var height = $("height").val();
+        if (height == "" || height == null){
+            Swal.fire("", "请输入高度", "error");
+            return
+        }
         Swal.fire({
             type: 'question', // 弹框类型
             title: '', //标题
             text: "是否删除！", //显示内容
-
             confirmButtonColor: '#3085d6',// 确定按钮的 颜色
             confirmButtonText: '确定',// 确定按钮的 文字
             showCancelButton: true, // 是否显示取消按钮
@@ -175,7 +184,6 @@
             reverseButtons: true  // 是否 反转 两个按钮的位置 默认是  左边 确定  右边 取消
         }).then(function (isConfirm) {
             try {
-                var height = $("height").val();
                 //判断 是否 点击的 确定按钮
                 if (isConfirm.value) {
                     $.ajax({
