--- a/src/main/resources/templates/fork.html
+++ b/src/main/resources/templates/fork.html
@@ -30,18 +30,22 @@
             </button>
             <input id="height" style="display: none"/>
         </div>
-    </div>
-    <div class="flex align-center flex-column my-3" id="right">
-        <div class="fa fa-check-circle fa-5x" style="color: #90E58A;"></div>
-        <div class="normal_text">
-            当前节点正常！
+        <div class="frok_restore2">
+        <div class="flex align-center flex-column ma-y4" id="wait">
+            <div class="fa fa-exclamation-circle fa-5x" aria-hidden="true"
+                 style="color: #E57373;text-align: center;"></div>
+            <div class="normal_text">
+                请先绑定节点！
+            </div>
         </div>
-    </div>
-    <div class="flex align-center flex-column my-3" id="wait">
-        <div class="fa fa-exclamation-circle fa-3x" aria-hidden="true"
-             style="color: #E57373;text-align: center;margin-top: 30px;"></div>
-        <div class="normal_text">
-            请先绑定节点！
+        </div>
+        <div class="frok_restore2">
+        <div class="flex align-center flex-column ma-y4" id="right">
+            <div class="fa fa-check-circle fa-5x" style="color: #90E58A;"></div>
+            <div class="normal_text">
+                当前节点正常！
+            </div>
+        </div>
         </div>
     </div>
 </div>
