--- a/src/main/resources/templates/node.html
+++ b/src/main/resources/templates/node.html
@@ -273,7 +273,7 @@
 
                     </div>
                     <div class="moda-le">
-                        <h4 class="modal-title moda-root-info">
+                        <h4 class="modal-title moda-root-love">
                             LevelDB路径:
                         </h4>
                         <input class="form-control" style="width: 70%" id="update_leveldb">
@@ -384,6 +384,9 @@
                                         alert(e);
                                     }
                                 });
+                            }else{
+                                Swal.fire("", result.message, "error");
+                                return;
                             }
                         }, 'json');
 
